--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ lightgbm = "^3.2.1"
 sweetviz = "^2.1.2"
 ptitprince = "^0.2.5"
 matplotlib-venn = "^0.11.6"
+pynmea2 = "^1.18.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
