--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ osmnx = "^1.1.1"
 momepy = "^0.4.4"
 geopandas = "^0.9.0"
 folium = "^0.12.1"
+simdkalman = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
