--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 
 input/google-smartphone-decimeter-challenge/*
 !.gitkeep
+output/*
+!.gitkeep
 
 # Created by https://www.gitignore.io/api/macos,python
 # Edit at https://www.gitignore.io/?templates=macos,python
