--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ momepy = "^0.4.4"
 geopandas = "^0.9.0"
 folium = "^0.12.1"
 simdkalman = "^1.0.1"
+optuna = "^2.8.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
